Made inject helper to reuse HTML and JS components; added variants of addition game

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Matt Zhang">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="/main/style.css" rel="stylesheet">
+    <link href="/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -15,9 +15,17 @@
         <h1 style="color: lightgreen">Alex's Math Adventure!</h1>
     </header>
     <br>
-    <li>
-        <a href="/pages/addition/index.html">Addition</a>
-    </li>
+    <ul style="list-style-type: none;">
+        <li>
+            <a href="/pages/addition/1.html">Addition 1</a>
+        </li>
+        <li>
+            <a href="/pages/addition/2.html">Addition 2</a>
+        </li>
+        <li>
+            <a href="/pages/addition/3.html">Addition 3</a>
+        </li>
+    </ul>
 </body>
 
 </html>
