Added basic styling to questions widget

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="/style.css" rel="stylesheet">
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* center vertically */
+            align-items: center; /* center horizontally */
+            min-height: 100vh; /* ensure body takes full viewport height */
+            margin: 0; /* remove default margin */
+        }
+    </style>
 </head>
 
 <body>
