--- a/pages/addition/1.html
+++ b/pages/addition/1.html
@@ -6,6 +6,17 @@
     <title>Addition</title>
     <meta name="author" content="Matt Zhang">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="/style.css" rel="stylesheet">
+    <style>
+        body {
+            display: flex;
+            justify-content: center; /* center horizontally */
+            align-items: center; /* center vertically */
+            min-height: 100vh; /* ensure body takes full viewport height */
+            margin: 0; /* remove default margin */
+        }
+    </style>
 </head>
 
 <body>
