Made question widget take lambdas; made subtraction lessons

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
         <li>
             <a href="/pages/addition/3.html">Addition 3</a>
         </li>
+        <li>
+            <a href="/pages/addition/4.html">Addition 4</a>
+        </li>
+        <li>
+            <a href="/pages/subtraction/1.html">Subtraction 1</a>
+        </li>
+        <li>
+            <a href="/pages/subtraction/2.html">Subtraction 2</a>
+        </li>
+        <li>
+            <a href="/pages/subtraction/3.html">Subtraction 3</a>
+        </li>
     </ul>
 </body>
 
