--- a/pages/subtraction/1.html
+++ b/pages/subtraction/1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Addition 2</title>
+    <title>Subtraction 1</title>
     <meta name="author" content="Matt Zhang">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -30,15 +30,15 @@
         import { initQuestionWidget } from '/components/question-widget/questions.js';
         initQuestionWidget(
             () => {
-                let a = getRandInt(10, 100);
-                let b = getRandInt(10, 100);
-                let question = `${a} + ${b} =`;
+                let a = getRandInt(1, 10);
+                let b = getRandInt(1, 10);
+                let question = `${a} - ${b} =`;
                 return {
                     "question": question,
-                    "answer": a + b
+                    "answer": a - b
                 }
             },
-            30, 60
+            60, 60
         );
     </script>
 </body>
