Improved question widget UX

--- a/pages/addition/1.html
+++ b/pages/addition/1.html
@@ -30,7 +30,7 @@
                 () => {
                     let a = getRandInt(1, 10);
                     let b = getRandInt(1, 10);
-                    let question = `${a} + ${b} =`;
+                    let question = `${a}<br>+ ${b}`;
                     return {
                         "question": question,
                         "answer": a + b
