--- a/pages/addition/2.html
+++ b/pages/addition/2.html
@@ -30,7 +30,7 @@
                 () => {
                     let a = getRandInt(10, 100);
                     let b = getRandInt(10, 100);
-                    let question = `${a} + ${b} =`;
+                    let question = `${a}<br>+ ${b}`;
                     return {
                         "question": question,
                         "answer": a + b
