--- a/pages/addition/3.html
+++ b/pages/addition/3.html
@@ -30,13 +30,13 @@
                 () => {
                     let a = getRandInt(100, 1000);
                     let b = getRandInt(100, 1000);
-                    let question = `${a} + ${b} =`;
+                    let question = `${a}<br>+ ${b}`;
                     return {
                         "question": question,
                         "answer": a + b
                     }
                 },
-                20,
+                15,
                 60
             );
         </script>
