--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
     <!--<div id="root"></div>-->
     <!--<script type="module" src="/src/main.jsx"></script>-->
-    <a href="/MathCurriculum/src/index.html">Temp Link</a>
+    <a href="/src/index.html">Temp Link</a>
   </body>
 </html>
